# Quantitative-Swing-Trading---Signal-Engine

./: .env.example  .gitignore  Dockerfile.base  Dockerfile.nlp  Dockerfile.service  Makefile  README.md  docker-compose.yml  netlify.toml  pyproject.toml  railway.json  vercel.json
.github/workflows/: ci.yml
demo/: package-lock.json  package.json
demo/src/: App.tsx  types.ts
demo/src/data/: index.ts  (+8 more)
deploy/: GITHUB_AND_RAILWAY_SETUP.md  railway.md
deploy/k8s/: README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT.md  README.md  SERVICES.md  SIGNAL_PIPELINE.md  TROUBLESHOOTING.md  VERIFYING.md
migrations/: 001_init.sql  002_retention.sql  003_fundamentals.sql  004_news_provider_default.sql  005_attribution.sql  006_sector_sentiment.sql  007_ml_feedback.sql
scripts/: dev.sh  init_db.py  run_full_pipeline.sh  setup_local.sh  verify_local.sh
scripts/ml/: evaluate_model.py  export_training_dataset.py  train_move_model.py
scripts/research/: correlation_scan.py
services/attribution_job/: main.py
services/fundamentals_ingest/: main.py
services/impact_job/: main.py
services/ml_outcome_job/: main.py
services/news_ingest/: main.py
services/nlp_worker/: main.py
tests/: __init__.py  conftest.py  test_attribution_math.py  test_build_signals.py  test_db_helpers.py  test_indicators.py  test_integration_db.py  test_ml_model_forward.py  test_polygon_rate_limiter.py  test_schemas.py  test_sector_etfs.py  test_sector_sentiment.py  test_signal_api_http.py  test_signal_logic.py  test_technical_z_score.py
web/: config.js  index.html  main.js  styles.css
(+64 files in other folders)
